--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # GitHub Sponsors
-github: ["Pkkiller"]
-thanks_dev: ["gh/Pkkiller"]
+github: ["Marktech"]
+thanks_dev: ["gh/Marktech"]
 
 # Additional Sponsorship Platforms (if any, e.g., Open Collective or Patreon)
 # Uncomment and replace URLs as needed
